fix: changed nav item width to fill container, instead of overflowing
this was essential since there is going to be different colors, consistency is key

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,18 @@
 @import "tailwindcss";
 
+@font-face {
+    font-family: 'Inter';
+    src: url('./fonts/inter/Inter-Regular.woff2') format('woff2'),
+        url('./fonts/inter/Inter-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
